# software_vulnerabilites_investigation

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: deploy.yml
sv_investigation/: _config.yml  _toc.yml  const.py  cve_project_process.ipynb  fstec_process.ipynb  github_advisory_process.ipynb  helpers.py  investigation.ipynb  lookup_commit_data.ipynb  open_source_products.csv  process_cve_data.ipynb
